load("@cc_config//:MACROS.bzl", "repo_paths")

PROD_REPOS = [
    "@cwalk//src:cwalk",
    "@libs7//src:s7",
    "@liblogc//src:logc",
    "@uthash//src:uthash",
]

repo_paths(
    name = "repo_paths",
    repos = PROD_REPOS
)

repo_paths(
    name = "test_repo_paths",
    repos = PROD_REPOS + [
        "@gopt//src:gopt",
        "@s7_tools//src:s7plugin_test_config",
        "@unity//src:unity"
    ]
)

