LIBS7_VERSION = "0.1.0"
CWALK_VERSION = "1.2.7"
CWALK_S7_VERSION = "1.2.7"

module(
    name = "cwalk_s7",
    version = CWALK_S7_VERSION,
    compatibility_level = 1
)

bazel_dep(name = "unity",  version = "2.5.2", dev_dependency = True)
bazel_dep(name = "platforms", version = "0.0.6")
bazel_dep(name = "liblog_cc",  version = "1.0.0")

# bazel_dep(name = "bazel_skylib", version = "1.4.2")
# bazel_dep(name = "uthash", version = "2.3.0")
# bazel_dep(name = "rules_cc", version = "0.0.6")
# bazel_dep(name = "rules_foreign_cc", version = "0.9.0")

# bazel_dep(name = "gopt", version = GOPT_VERSION)
# bazel_dep(name = "cexception", version = CEXCEPTION_VERSION)

bazel_dep(name = "cwalk", version = CWALK_VERSION)
bazel_dep(name = "libs7", version = LIBS7_VERSION)
