load("@s7_tools//src:RULES.bzl", "clibgen")
load("@libs7//config/cc:BUILD.bzl", "BASE_COPTS")
load("//:MODULE.bzl",
     "CWALK_S7_VERSION",
     "CWALK_VERSION",
     "LIBS7_VERSION")

SRCS = ["@libs7//src:s7.h"]
DEPS = ["@libs7//src:s7", "@cwalk//src:cwalk"]
INCLUDE_PATHS = [
    "-Iexternal/libs7~{}/src".format(LIBS7_VERSION),
    "-Iexternal/cwalk~{}/include".format(CWALK_VERSION),
]
COPTS         = BASE_COPTS + INCLUDE_PATHS

################################################################
cc_library(
    name            = "cwalk_s7",
    linkstatic      = True,
    alwayslink      = True,
    srcs            = SRCS + ["libcwalk_s7.c"],
    deps            = DEPS,
    copts           = COPTS,
    # linkopts      = LINKOPTS,
    # local_defines = DEFINES
    visibility = ["//visibility:public"]
)

cc_shared_library(
    name = "cwalk_s7_dso",  # create libcwalk_s7.{dylib,so}
    shared_lib_name = select({
        "@platforms//os:macos": "libcwalk_s7.dylib",
        "@platforms//os:linux": "libcwalk_s7.so",
        # "@platforms//os:windows": "libcwalk_s7.dll",
        "//conditions:default": "libcwalk_s7.so"
    }),
    deps            = [":cwalk_s7"],
    visibility = ["//visibility:public"]
)

clibgen(
    name = "clibgen",
    args = [
        # "-v",
        "--script", "$(location libcwalk_clibgen.scm)"
    ],
    srcs = [":libcwalk_clibgen.scm"],
    outs = [":libcwalk_s7.c"]
)
