load("//config/cc:BUILD.bzl",
     "BASE_SRCS", "BASE_DEPS",
     "BASE_COPTS", "BASE_INCLUDE_PATHS",
     "BASE_DEFINES", "BASE_LINKOPTS")

SRCS = BASE_SRCS
DEPS = BASE_DEPS + ["@cwalk//src:cwalk"]
INCLUDE_PATHS = BASE_INCLUDE_PATHS + [
    "-I$(@cwalk)/include",
    "-I$(GENDIR)/$(@)/src"
]
COPTS         = BASE_COPTS + INCLUDE_PATHS
LINKOPTS   = BASE_LINKOPTS
DEFINES    = BASE_DEFINES
TOOLCHAINS = ["//:repo_paths"]
exports_files(["trace_dev.h"]) # for testing

# DEPS = ["@libs7//src:s7", "@cwalk//src:cwalk"]
# INCLUDE_PATHS = [
#     "-I$(@libs7)/src",
#     "-I$(GENDIR)/$(@libs7)/src",
#     "-I$(@cwalk)/include"
# ]
# COPTS         = BASE_COPTS + INCLUDE_PATHS
# TOOLCHAINS = ["//:repo_paths"]

################################################################
cc_library(
    name          = "cwalk_s7",
    linkstatic    = True,
    alwayslink    = True,
    srcs          = SRCS + ["libcwalk_s7.c"],
    deps          = DEPS,
    copts         = COPTS,
    linkopts      = LINKOPTS,
    local_defines = DEFINES,
    toolchains    = TOOLCHAINS,
    visibility    = ["//visibility:public"]
)

cc_shared_library(
    name = "cwalk_s7_dso",  # create libcwalk_s7.{dylib,so}
    shared_lib_name = select({
        "@platforms//os:macos": "libcwalk_s7.dylib",
        "@platforms//os:linux": "libcwalk_s7.so",
        # "@platforms//os:windows": "libcwalk_s7.dll",
        "//conditions:default": "libcwalk_s7.so"
    }),
    deps            = [":cwalk_s7"],
    visibility = ["//visibility:public"]
)
