load("@rules_cc//cc:defs.bzl", "cc_test")

load("//:MODULE.bzl",
     # "GOPT_VERSION",
     "LIBS7_VERSION",
     "LIBLOGC_VERSION",
     "S7_TOOLS_VERSION",
     "UNITY_VERSION",
     "UTHASH_VERSION")

DEPS          = [
    "@s7_tools//src:clibtest_config",
    "@unity//src:unity",
]

SRCS          = []
INCLUDE_PATHS = [
    "-Isrc",
    "-Itest",

    "-Iexternal/libs7~{}/src".format(LIBS7_VERSION),
    "-I$(GENDIR)/external/libs7~{}/src".format(LIBS7_VERSION),
    "-Iexternal/liblogc~{}/src".format(LIBLOGC_VERSION),
    "-Iexternal/unity~{}/src".format(UNITY_VERSION),
    "-Iexternal/uthash~{}/src".format(UTHASH_VERSION),

    "-I$(GENDIR)/external/s7_tools~{}/src".format(S7_TOOLS_VERSION),
]
COPTS         = INCLUDE_PATHS
DEFINES       = [] #TEST_DEFINES
LINKOPTS      = [] #TEST_LINKOPTS

TIMEOUT = "short"

################################################################
test_suite(
    name  = "test",
    tests = [
        ":cwalk_s7_static_test",
        ":cwalk_s7_dso_static_test",
        ":cwalk_s7_dso_dynamic_test",
    ]
)

cc_test(
    name = "cwalk_s7_static_test",
    linkstatic = True,
    srcs = SRCS + ["cwalk_test.c"],
    deps = DEPS + ["//src:cwalk_s7"],
    copts = COPTS,
    local_defines = DEFINES,
    linkopts = LINKOPTS,
    timeout  = TIMEOUT,
)

cc_test(
    name = "cwalk_s7_dso_static_test",
    linkstatic = True,
    srcs = SRCS + [
        "cwalk_test.c",
        "//src:cwalk_s7_dso",
    ],
    local_defines = DEFINES,
    # data = ["//src:cwalk_s7_dso"],
    deps = DEPS,
    copts = COPTS,
    linkopts = LINKOPTS,
    timeout  = TIMEOUT,
)

cc_test(
    name = "cwalk_s7_dso_dynamic_test",
    linkstatic = True,
    srcs = SRCS + [
        "cwalk_test.c",
    ],
    local_defines = DEFINES,
    data = ["//src:cwalk_s7_dso"],
    deps = DEPS,
    copts = COPTS,
    linkopts = LINKOPTS,
    timeout  = TIMEOUT,
)

# cc_test(
#     name = "cwalk_s7",
#     linkstatic = True,
#     srcs = SRCS + ["cwalk_test.c"] + select({
#         # "//config/clibs/linktime:load?": [
#         "//config/clibs/link:shared?": [
#             "//lib/libcwalk:cwalk_s7.c" ## , "//lib/libcwalk:libcwalk_s7.h",
#         ],
#         "//conditions:default": []
#     }),
#     local_defines = DEFINES,
#     deps = DEPS + select({
#         # "//config/clibs/linktime:build?": [
#         "//config/clibs/link:archive?": [
#             "@cwalk_s7//src:cwalk_s7"
#             # "//lib/libcwalk:cwalk_s7"
#         ],
#         # "//config/clibs/linktime:load?": [
#         #     "//lib/libcwalk:cwalk_s7_dso"],
#         "//conditions:default": []
#     }),
#     data = select({
#         # "//config/clibs/linktime:run?": [
#         "//config/clibs/link:runtime?": [
#             "@cwalk_s7//src:cwalk_s7_dso"
#             # "//lib/libcwalk:cwalk_s7_dso"
#         ],
#         "//conditions:default": []
#     }),
#     copts = COPTS + [
#         # "-I$(GENDIR)/lib/libcwalk",
#         # "-I$(GENDIR)/external/libs7/lib/libcwalk",
#     ],
#     linkopts = LINKOPTS,
#     timeout = TIMEOUT
# )

